# LFA

./: .gitignore
LFA/: TODO.txt
LFA/lab2/: automate.in  p1.cpp  p2.cpp  test.cpp  test.ilk
LFA/lab2/inputs/: input2.txt  input3.txt  input4.txt  input5.txt
LFA/lab2/p1/: automate.in  automate.out  p1.cpp
LFA/lab2/p2/: automate.in  automate.out  p2.cpp
LFA/lab2/p3/: automate.out  p3.cpp  p3.ilk
tema1/inputs/: input.txt  input2.txt  input3.txt  input4.txt  input5.txt
tema1/p1/: automate.in  automate.out  p1.cpp
tema1/p2/: automate.in  automate.out  p2.cpp
tema1/p3/: automate.out  p3.cpp
tema2/: CMakeLists.txt  automat.out
tema2/DFA_APP/: app.cpp
tema2/DFA_MINIMIZATION/: DFA_MINIMIZATION.cpp  DFA_MINIMIZATION.h
tema2/DFA_MINIMIZATION/inputs/: input2.txt
tema2/NFA_TRANSFORMATION/: NFA_TRANSFORMATION.cpp  NFA_TRANSFORMATION.h
tema2/NFA_TRANSFORMATION/inputs/: input5.txt
tema2/classes/Automaton/: Automaton.cpp  Automaton.h
tema2/classes/State/: State.cpp  State.h  StateComparator.h
tema2/classes/Transition/: Transition.cpp  Transition.h
tema2/classes/fileExceptions/: fileExceptions.h
tema2/functions/: functions.cpp  functions.h
tema2/p1/: automat.out  p1.cpp
tema2/p1/inputs/: input1.txt  input2.txt  input3.txt  input4.txt
tema2/p2/: automat.out  p2.cpp
tema2/p2/inputs/: input1.txt  input3.txt
